--- a/client/src/componentes/Page404/page404.css
+++ b/client/src/componentes/Page404/page404.css
@@ -1,3 +1,10 @@
 .page404 {
-    background-color: antiquewhite;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.page404 img {
+    display: flex;
+    justify-content: center;
 }
