--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,37 +2,22 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
+  float: left;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 0;
+  padding-top: 0;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+
+.Ligth {
+  background-color: antiquewhite;
+  color: #171A21;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Dark {
+  background-color: #171A21;
+  color: antiquewhite;
+
 }
