--- a/client/src/componentes/cards/Card.css
+++ b/client/src/componentes/cards/Card.css
@@ -1,38 +1,61 @@
 .card {
-    margin: 5px;
+    margin: 3px;
     margin-top: 30px;
-    width: 200px;
+    width: 268px;
     height: 300px;
-    border-radius: 5px;
-    background-size: cover;
-    background-position: center ;
-    background-repeat: no-repeat;
-    box-shadow: 3px 5px 5px #09f;
+  transition: 0.5;
     overflow: hidden;
     float: left;
+   
 }
 
+.card:hover {
+    box-shadow: inset 0 -3em 3em rgb(0, 0, 0, 0, 1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgb(0, 0, 0,0, 3) ;
+}
+
+
+
+.imgC {
+    width: 100%;
+    height: 59%;
+}
+.imgC img {
+     width: 100%;
+     height: 100%;
+}
 .content {
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    height: 40%;
+    color: var(--main-color);
+   text-align: left;
+   margin: 10px;
+    
+}
+
+.content  h2 {
+    margin-top: 10px;
+    padding: 0;
+    font-size: 18px;
+}
+
+.content p {
+    padding: 0;
+    margin-top: -12px;
+    font-size: 13px;
+    color: var(--main-border-color);
+}
+
+.card span {
+    font-size: 13px;
+
+}
+
+.card ion-icon {
+    color: red;
+    margin-top: 10px;
+    display: block;
     align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, .4);
-    opacity: 0;
-    transition: .5s;
 }
-
-.content h2, p {
-    color: antiquewhite;
-    margin: 10px 0;
-}
-
-.card:hover .content {
-    opacity: 1;
-}
-
 
 
 
