--- a/client/src/componentes/createGame/CreateGame.css
+++ b/client/src/componentes/createGame/CreateGame.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #171A21; 
-    
+    background-color: var(--main-bg-color); 
 }
 
 .formC{
@@ -13,44 +12,44 @@ body {
 }
 .caja1 {
     width: 48%;
-    height: 450px;
+    height: 480px;
     float: left;
-    background-color:#171A21 ;
-    color: antiquewhite;
-    box-shadow: 1px 2px 4px #09f;
-
+    background-color: var(--main-bg-color) ;
+    color: var(--main-color);
+    box-shadow: 1px 2px 4px var(--main-border-color);
+    margin-top: 50px;
 
     
 }
 
 .caja1:after {
   width: 48%;
-  height: 450px;
+  height: 480px;
   float: left;
-  background-color:#171A21 ;
-  color: antiquewhite;
-  box-shadow: 0 15px 20px #09f;
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
+  box-shadow: 0 15px 20px var(--main-border-color);
 
   
 }
 
 .caja2 {
     width: 48%;
-    height: 450px;
+    height: 480px;
     float: left;
-    background-color: #171A21;
-    color:  antiquewhite;
-    box-shadow: 1px 2px 4px #09f;
-    
+    background-color: var(--main-bg-color);
+    color:  var(--main-color);
+    box-shadow: 1px 2px 4px var(--main-border-color);
+    margin-top: 50px;
 }
 
 .caja2 ::after {
   width: 48%;
   height: 450px;
   float: left;
-  background-color: #171A21;
-  color:  antiquewhite;
-  box-shadow: 0 15px 20px #09f;
+  background-color: var(--main-bg-color);
+  color:  var(--main-color);
+  box-shadow: 0 15px 20px var(--main-border-color);
 }
 
 
@@ -59,83 +58,65 @@ img {
 }
 
 .conten {
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .conten2 {
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .divs {
     position: relative;
-    height: 50px;
+    height: 40px;
     width: 90%;
-    margin-bottom: 25px; 
+    margin: 30px;
+    
+    padding: 5px;
+
 }
 
 .lbl-nombre{
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
   left: 0;
   width: 70%;
   height: 70%;
   pointer-events: none;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
 }
 
-.lbl-nombre:after{
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 100%;
-  transform: translateX(-100%);
-  transition: all 0.3s ease;
-}
 
 .input {
     top: 0px;
     left: 0px;
-    height: 50%;
+    height: 45%;
     width: 85%;
     background: none;
-    color: white;
-    padding-top: 20px;
+    color: var(--main-color);
+    padding: 10px;
     border: none;
     outline: 0px;
-    border-bottom: 1px solid white;
+    
+    border: 1px solid  var(--main-color);
     
     
   }
 
   .text-nomb{
     position: absolute;
-    bottom: 5px;
     left: 25px;
-    transition: all 0.3s ease;
-    
+    height: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
-  .input:focus + .lbl-nombre .text-nomb, input:valid + .lbl-nombre .text-nomb{
-    transform: translateY(-150%);
-    font-size: 14px;
-   
-  }
-  .input:focus + .lbl-nombre:after, input:valid + .lbl-nombre:after{
-    transform: translateX(0%);
-  }
-  @media only screen and (min-width:320px) and (max-width:768px){
-   .form{
-    width:85%;
-  }
-  }
+
+ 
 
 
   .divs2 {
     height: 160px;
     width: 100%; 
-    color: antiquewhite;
+    color: var(--main-color);
 }
 
 
@@ -157,27 +138,31 @@ img {
 }
 .button {
   border: 0;
-  background-image: linear-gradient(
-   150deg,
-    antiquewhite,
-   #09f,
-   #171A21
-  );
-
-  border-radius: 8px;
-  color: antiquewhite;
-  display: flex;
-  font-size: 18px;
-  padding: 4px;
-  cursor: pointer;
-  transition: .3s;
+   background-image: linear-gradient(
+    150deg,
+     antiquewhite,
+    #09f,
+    #171A21
+   );
+   width: 97px;
+   height: 50px;
+   color: var(--main-color);
+   display: flex;
+   font-size: 18px;
+   padding: 4px;
+   cursor: pointer;
+   transition: .3s;
 }
 
 .button span {
-  background-color: #171A21 ;
-  padding: 16px 24px;
-  border-radius: 6px;
-  transition: .3s;
+  background-color: var(--main-bg-color);
+    padding: 10px 12px;
+    transition: .3s;
+    text-decoration: none;
+    text-align: center;
+    height: 50%;
+    width: 80%;
+    font-size: 15px;
 }
 
 .button :hover span {
@@ -191,7 +176,7 @@ img {
 }
 
 h1 {
-  color: antiquewhite;
+  color: var(--main-color);
   font-family:  sans-serif;
 }
 
@@ -212,69 +197,20 @@ h1 {
   height: 500px;
 }
 
+.validate {
+  font-size: 12px;
+  display: flex;
+  margin-left: 35px;
+  color: red;
+}
 
-
-
-/* .form{
+.validate2 {
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  color: red;
   width: 100%;
-  height: 50px;
-  max-width: 400px;
-  position: relative;
-  overflow: hidden;
 }
-.form input{
-  width: 100%;
-  height: 100%;
-  background: none;
-  color: #fff;
-  padding-top: 20px;
-  border: none;
-  outline: 0px;
-}
-.form .lbl-nombre{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  border-bottom: 1px solid #c7c7c7;
-}
-.form .lbl-nombre:after{
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 100%;
-  border-bottom: 3px solid #2ecece;
-  transform: translateX(-100%);
-  transition: all 0.3s ease;
-}
-.text-nomb{
-  position: absolute;
-  bottom: 5px;
-  left: 0;
-  transition: all 0.3s ease;
-  color: #fff;
-}
-input:focus + .lbl-nombre .text-nomb,.form input:valid + .lbl-nombre .text-nomb{
-  transform: translateY(-150%);
-  font-size: 14px;
-  color: #2ecece;
-}
-input:focus + .lbl-nombre:after, .form input:valid + .lbl-nombre:after{
-  transform: translateX(0%);
-}
-@media only screen and (min-width:320px) and (max-width:768px){
- .form{
-  width:85%;
-}
-  } */
-
-
-
-
 
 
 
