--- a/client/src/componentes/detail/Detail.css
+++ b/client/src/componentes/detail/Detail.css
@@ -16,8 +16,8 @@
     height: 700px;
     width: 75%;
     margin-top: 20px;
-    box-shadow: 3px 5px 5px #09f;
-    background-color: #171A21;  
+    box-shadow: 3px 5px 5px var(--main-border-color);
+    background-color: var(--main-bg-color);  
     background-size: contain;
     background-repeat: no-repeat;
       
@@ -26,9 +26,9 @@
 
 .inf {
    margin-top: 200px;
-  background-color: #171A21;
+  background-color: var(--main-bg-color);
   padding: 40px;
-  box-shadow: 3px 5px 5px #09f;
+  box-shadow: 3px 5px 5px  var(--main-border-color);
 }
 
 .divsD {
@@ -38,7 +38,7 @@
 }
 
 .divsD h3 {
-    color: #09f;
+    color: var(--main-border-color);
     font-size: 13px;
     text-align: left;
     width: 10%;
@@ -49,7 +49,7 @@
     text-align: left;
     font-size: 11px;
     width: 90%;
-    color: antiquewhite;
+    color: var(--main-color);
 
 }
 
