--- a/client/src/componentes/videogames/Videogames.css
+++ b/client/src/componentes/videogames/Videogames.css
@@ -1,61 +1,69 @@
 .VContainer {
     height: 100%;
-    margin: 10px;
+    width: 100%;
     padding: 1px;
     margin-top: 30px;
+    float: left;
+    
+    
     
 }
 
 .Vcaja1 {
-    margin: 20px;
-    height: 200px;
+    margin: 10px;
+    height: 100px;
+    width: 95%;
     display: flex;
-    justify-content: center;
+    justify-content: right;
+    box-shadow: 0 5px 10px var(--main-border-color);
+    float: left;
 }
 
 .Vcaja1 div {
-    float: left;
-    width: 40%;
-    align-items: center;
+    width: 100%;
+     height: 100%;
+   display: flex;
+   justify-content: right;
+   align-items: center;
+   margin: 10px;
+   padding: 5px;
+    
 }
 
 .Vcaja1 div img {
     height: 330px;
-   margin-top: -70px;
+   margin-top: -30px;
    
     
 }
 
 .Vcaja1 div h1 {
     margin-top: 50px;
-    color: antiquewhite;
+    color: var(--main-color);
     width: 80%;
     text-align: right;
+
 }
 
 
 .Vcaja2 {
- margin-left: 100px;
-width: 95%;
-    
+width: 100%;
+margin-top: 50px;
 }
 
-hr {
-  margin-top: 70px;
-  width: 80%;
-  box-shadow: 1px 2px 4px #09f;
-}
+
 
 hr ::after {
-    box-shadow: 0 15px 20px #09f;
+    box-shadow: 0 15px 20px var(--main-border-color);
 }
 
 .Rdivs {
     display: flex;
    justify-content: left;
-   color: antiquewhite;
+   color: var(--main-color);
    font-size: 15px;
    margin: 10px;
+   
 }
 
 .texto h1 {
@@ -63,4 +71,12 @@ hr ::after {
     width: 100px;
     font-size: 30px;
     
+}
+.noVideo {
+    width: 100%;
+}
+.noGames  {
+    display: block;
+    height: 20%;
+    margin: 200px;
 }
